syntax = "proto3";

package playerspb;

import "playerspb/messages.proto";

service PlayersService {
  rpc GetPlayer(GetPlayerRequest) returns (GetPlayerResponse) {};
}

message GetPlayerRequest {
  string id = 1;
}
message GetPlayerResponse {
  Player player = 1;
}
